--- a/2-Computer-Systems/problems/1-Protobuf-Varint/tsconfig.json
+++ b/2-Computer-Systems/problems/1-Protobuf-Varint/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "lib": ["es2020", "DOM"],
-    "module": "CommonJS",
+    "lib": ["es2020"],
+    "types": ["node"],
+    "module": "commonjs",
     "strict": true,
     "outDir": "output/",
     "sourceMap": true
