--- a/2-Computer-Systems/problems/2-CSS-Color-Convert/package.json
+++ b/2-Computer-Systems/problems/2-CSS-Color-Convert/package.json
@@ -6,8 +6,14 @@
   "author": "Josh Brown",
   "license": "Private",
   "private": true,
+  "scripts": {
+    "start": "tsc && node output/start.js",
+    "dev:start": "nodemon src/start.ts"
+  },
   "devDependencies": {
+    "@types/node": "^20.8.7",
     "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
