Add script to diff the expected file with STDOUT

--- a/2-Computer-Systems/problems/6-UTF8-Truncate/package.json
+++ b/2-Computer-Systems/problems/6-UTF8-Truncate/package.json
@@ -14,7 +14,7 @@
     "typescript": "^5.2.2"
   },
   "scripts": {
-    "start": "ts-node src/start.ts",
+    "start": "ts-node src/start.ts | head -n 13 | tail -n 11 | diff helpfiles/expected -",
     "dev:start": "nodemon src/start.ts"
   }
 }
